upgrade libs